@@ -48,7 +48,7 @@
               <div class="field">
                 &nbsp;&nbsp;
                 <textarea name="description:text" rows="5" cols="50"
-                  wrap="soft"><tal:block replace="project_description"/></textarea>
+                  ><tal:block replace="project_description"/></textarea>
               </div>
             </div>
           </td>
@@ -66,7 +66,17 @@
       </p>
     </form>
 
-    <metal:block use-macro="here/cps_task_project_lib/macros/tasks_view" />
+    <form method="post" action="doDeleteTasks"
+      tal:define="enable_deletion python:True">
+      <metal:block use-macro="here/cps_task_project_lib/macros/tasks_view" />
+      <p>
+        <input type="hidden" name="project_id" value=""
+          tal:attributes="value project_id"/>
+
+        <button type="submit" class="destructive"
+          i18n:translate="button_delete">Delete</button>
+      </p>
+    </form>
 
   </metal:block>
 </html>
