@@ -1,4 +1,4 @@
-##parameters=ids=[]
+##parameters=ids=[], project_id=None
 #$Id$
 
 """Delete all the tasks choosen from the Screen UI.
@@ -10,13 +10,13 @@ from zLOG import LOG, DEBUG
 LOG("DELETE CANDIDATE TASKS", DEBUG, ids)
 
 ptasks = context.tasks
-#
+
 # Flag to check if the delete operation is allowed.
 # Just for security cause we are not going to let
 # the user the possiblity to do it.
 # But he can still try by calling the method...
 #
-not_allowed = 0
+not_allowed = False
 psm = 'task_deleted'
 
 for id in ids:
@@ -24,7 +24,12 @@ for id in ids:
     try:
         ptasks.manage_delObjects([id])
     except:
-        not_allowed = 1
+        not_allowed = True
 
-# Do something if the member is not allowed to do it with the help of the flag.
-return REQUEST.RESPONSE.redirect('.')
+# TODO: Do something if the member is not allowed to do it (thanks to the flag)
+
+utool = context.portal_url
+portal = utool.getPortalObject()
+portal_absolute_url = portal.absolute_url()
+return REQUEST.RESPONSE.redirect('%s/cps_task_project_edit_form?project_id=%s'
+                                 % (portal_absolute_url, project_id))
