@@ -11,7 +11,8 @@ Bug fixes
 - Add the resetting of task dependency when a task change of project.
 - Add sanitizing code when displaying tasks in case some tasks have change of
   project.
-- Fixed the display of tasks which are dependent, but not on top tasks.
+- Fix the display of tasks which are dependent, but not on top tasks.
+- Add what's needed to delete tasks on a project edit form.
 New internal features
 ~~~~~~~~~~~~~~~~~~~~~
 - 
